--- a/manual-check-https.html
+++ b/manual-check-https.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript">
 	$.getJSON( "https.txt",
 	    function( json ) {
-	        $.each(json.data.soon, function () {
+	        $.each(json, function () {
 	            //create row
 	            row  = $("<tr></tr>");
 
