Directions for use

--- a/manual-check-https.html
+++ b/manual-check-https.html
@@ -11,6 +11,7 @@
 	</style>
 </head>
 <body>
+	<p>Put a <strong>X</strong> in the filename column if not rule should be created. //is a comment</p>
 	<table id="sites">
 	<thead>
 	<th>URL</th><th>Name</th><th>Filename</th><th>Host</th><th>From</th><th>To</th>
