Did another scrape and scan

--- a/manual-check-https.html
+++ b/manual-check-https.html
@@ -12,6 +12,15 @@
 </head>
 <body>
 	<p>Put a <strong>X</strong> in the filename column if not rule should be created. //is a comment</p>
+	<pre>
+	Missing:
+http://www.foodstandards.gov.au/
+http://data.daff.gov.au/mapserv/plant/
+http://data.daff.gov.au/nifs/
+http://www.defence.gov.au/adc/
+http://www.defence.gov.au/adfa/
+http://www.defence.gov.au/adfwc/
+</pre>
 	<table id="sites">
 	<thead>
 	<th>URL</th><th>Name</th><th>Filename</th><th>Host</th><th>From</th><th>To</th>
